# python-boilerplate

./: .ruff.toml  README.md  cspell.config.yaml  pyproject.toml  pyproject.toml2  rename.py
.devcontainer/: devcontainer.json  devcontainer.json2
.github/workflows/: commitizen.yaml  cspell.yaml  generate-badges.yaml  install.yaml  lint.yaml  mypy.yaml  pytest.yaml
sphinx/: Makefile  conf.py  index.md
sphinx/_static/: custom.css
sphinx/getting-started/: configuration-basics.md
sphinx/source/: api.rst  conf.py  index.rst  using-PROJECT.rst
sphinx/source/releases/: index.rst
sphinx/tutorials/: 01-TUTORIAL-1.md
src/PROJECT/: PROJECT.py
tests/: regen-outputs.sh
