[tool.poetry]
name = "PROJECT"
version = "0.1.0"  # Starting with 0.1.0 is more standard than 0.0.0a
description = "TODO"
authors = ["Gwyn Uttmark <biosafetylevel5@gmail.com>"]
license = "MIT"  # Add a license field
repository = "https://github.com/biosafetylvl5/PROJECT"  # Add repository field

packages = [{include="project", from="src"}]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies] # must download to run
python = ">=3.8,<4.0"  # Specify upper bound to prevent Python 4 compatibility issues (lol, it'll be fun when python 4 comes out)
rich
rich-argparse

# Doc group
sphinx = { version = "^7.2.0", optional = true }
sphinxcontrib-runcmd = { version = "*", optional = true }
sphinxcontrib-napoleon = { version = "*", optional = true }
sphinx-argparse = { version = "^0.4.0", optional = true }

[tool.poetry.group.dev.dependencies]
# Development dependencies that are always installed for development
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.287"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
brassy = "*"

[tool.poetry.extras]
doc = [
    "sphinx",                    # for docs buildin
    "sphinxcontrib-runcmd",      # for docs buildin
    "sphinxcontrib-napoleon",    # for docs buildin
    "sphinx-argparse",           # for docs buildin
    "pinkrst",                   # for rst formatting
    "doc8",                      # for rst linting
    "brassy",                    # for changelog rendering
]

lint = [
    "pinkrst",                   # for rst auto-formatting
    "doc8",                      # for rst linting
    "prettier",                  # YAML, JSON linting
    "ruff",                      # Python linting
    "mypy",                      # Type checking
]

test = [
    "pytest",                    # for running tests
    "pytest-cov",                # for test coverage
    "pytest-xdist",              # for parallel testing
]

[tool.poetry.scripts]
# project_cli = "project.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/biosafetylvl5/PROJECT"
Issues = "https://github.com/biosafetylvl5/PROJECT/issues"
Documentation = "https://biosafetylvl5.github.io/PROJECT/"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert warnings

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
